fix: fix job search chart logic
